New Code Samples

--- a/CSharp/02. HTML to RTF/04. Convert HTML to WPF RichTextBox/Convert HTML to WPF RichTextBox.csproj
+++ b/CSharp/02. HTML to RTF/04. Convert HTML to WPF RichTextBox/Convert HTML to WPF RichTextBox.csproj
@@ -34,7 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
- 
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xaml" />
@@ -47,6 +46,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <PackageReference Include="sautinsoft.htmltortf">
+      <Version>*</Version>
+    </PackageReference>
     <PackageReference Include="SkiaSharp">
       <Version>2.88.6</Version>
     </PackageReference>
