--- a/Platforms/DockerHTMLtoRTF/HTMLtoRTFDocker.csproj
+++ b/Platforms/DockerHTMLtoRTF/HTMLtoRTFDocker.csproj
@@ -14,6 +14,8 @@
 	  <PackageReference Include="SkiaSharp" Version="2.88.7" />
 	  <PackageReference Include="SkiaSharp.HarfBuzz" Version="2.88.7" />
 	  <PackageReference Include="Svg.Skia" Version="1.0.0.18" />
+	  <PackageReference Include="System.IO.Packaging" Version="4.5.0" />
+	  <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
